add jdk 11 profile